Fix image overflow showing owon transition on webkit

--- a/components/AudioPlayer.module.css
+++ b/components/AudioPlayer.module.css
@@ -46,6 +46,10 @@
   border-radius: 7%;
   overflow: hidden;
   background-color: #eee;
+
+  /* Fix for bug showing image overflow on transition on webkit */
+  backface-visibility: hidden;
+  transform: translate3d(0, 0, 0);
 }
 
 .loadingTextContainer {
